Connected Liquibase; Created db schema; Created model entities as POJO;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# INTERNATIONALIZATION
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
 
+### DB settings ###
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql}://${POSTGRESQL_HOST:localhost}:5432/meetingRoomsSchedules?useUnicode=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+### In practice these variables will be placed in application-dev.properties for secure ###
+DATASOURCE_USERNAME = postgres
+DATASOURCE_PASSWORD = 36352
+
+## Liquibase settings
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
