Fixed db schema; Add test data to db using liquibase; Add repositories to entities; Add services to entities; Add custom exceptions for using with services;

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   # DB schema initialization
   - include:
       file: db/changelog/schema/2021-06-29-init-db-schema.sql
+  # Populating DB with test data
+  - include:
+      file: db/changelog/data/2021-06-30-add-test-data.sql
