working display week events mapping to index.html;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ DATASOURCE_PASSWORD = 36352
 ## Liquibase settings
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+
+## Thymeleaf settings
+spring.thymeleaf.cache=false
