--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
+<!--		<bootstrap.version>4.0.0-2</bootstrap.version>-->
+		<bootstrap.version>4.4.1-1</bootstrap.version>
+		<webjars-locator.version>0.30</webjars-locator.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,6 +39,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>${bootstrap.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>${webjars-locator.version}</version>
 		</dependency>
 
 <!--		<dependency>-->
