--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   # Populating DB with test data
   - include:
       file: db/changelog/data/2021-06-30-add-test-data.sql
+  # Populating DB with test data: add monday events test data
+  - include:
+        file: db/changelog/data/2021-02-07-add-more-test-data.sql
