--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
 <!--		<bootstrap.version>4.0.0-2</bootstrap.version>-->
-		<bootstrap.version>4.4.1-1</bootstrap.version>
+		<bootstrap.version>4.0.0-2</bootstrap.version>
 		<webjars-locator.version>0.30</webjars-locator.version>
+		<font-awesome.version>5.11.2</font-awesome.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,10 +49,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>${bootstrap.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>${font-awesome.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
