Work version of Schedule.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 
+#App settings
+server.port = 8080
+
 ### DB settings ###
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql}://${POSTGRESQL_HOST:localhost}:5432/meetingRoomsSchedules?useUnicode=true&serverTimezone=UTC&createDatabaseIfNotExist=true
